gameApi.test.js + GameDetails - fix big spacing anomaly

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ main {
   flex: 1;
   display: flex;
   flex-direction: column;
-  margin-top: calc(max(80px, 10px, 10vh)); /* Accounts for Header + Filters */
+  margin-top: var(--header-height); /* Accounts for Header + Filters */
 }
 
 section.game-view {
