--- a/src/features/Filters/Filters.css
+++ b/src/features/Filters/Filters.css
@@ -6,15 +6,19 @@
     justify-content: space-around;
     margin-top: 1rem;
     padding: 1rem;
+    font-size: calc(0.5rem + 0.5vw);
 }
 
 .filters select {
-    padding: 0.3rem;
     margin: 0.5rem;
     background-color: gainsboro;
     border: 1px solid #ccc;
     border-radius: 5px;
-    font-size: 0.8rem;
+}
+
+.filters select,
+.filters option {
+    padding: 0.5rem;
 }
 
 .reset-button {
@@ -56,13 +60,4 @@
     .year-filter {
         display: none;
     }
-}
-
-@media only screen and (max-width: 400px) {
-
-    .filters select {
-        font-size: 0.6rem;
-        padding: 0.2rem;
-    }
-
 }
