--- a/src/features/Games/GameDetails/GameDetails.css
+++ b/src/features/Games/GameDetails/GameDetails.css
@@ -1,8 +1,6 @@
 .game-details {
+    height: 100%;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    font-size: 1.2rem;
 }
 
 .game-details h4 {
@@ -18,6 +16,7 @@
     text-align: center;
     gap: 0.5rem;
     padding: 1rem;
+    margin-top: auto;
     margin-bottom: 0;
 }
 
@@ -31,6 +30,7 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
     font-weight: 600;
     text-transform: uppercase;
+    font-size: calc(1rem + 1vw);
 }
 
 .links {
@@ -82,17 +82,18 @@
 .game-info-container,
 .game-description {
     padding: 1rem 4rem;
+    font-size: calc(0.6rem + 0.6vw);
 }
 
+.game-info-container h4,
+.game-description h4,
 .game-info-container p {
     padding: 0;
 }
 
 .game-info {
-    flex: 2;
-    display: block;
-    text-align: left;
-    padding-right: 1rem;
+    flex: 5;
+    padding-right: 0.5rem;
 }
 
 .game-info a,
@@ -107,17 +108,13 @@
 }
 
 .game-aside {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-size: 1.2rem;
+    flex: 2;
 }
 
 .game-description {
+    width: 100%;
     text-align: start;
     background-color: darkgray;
-    padding: 1rem 4rem;
 }
 
 .game-description p {
@@ -137,24 +134,11 @@
 
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 450px) {
 
-    .game-header,
-    .game-details h4,
-    .game-info span,
-    .game-info a,
-    .game-info p,
-    .game-description p,
-    .game-aside h4,
-    .game-aside span,
-    .game-aside p,
-    .game-aside a,
-    .rawg-logo {
-        font-size: 0.8rem;
-    }
-
-    .title {
-        font-size: 1rem;
+    .game-info-container,
+    .game-description {
+        padding: 1rem;
     }
 
 }
