--- a/src/features/Header/Header.css
+++ b/src/features/Header/Header.css
@@ -3,7 +3,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    height: max(80px, 10px, 10vh);
+    height: var(--header-height);
     z-index: 1100;
     display: flex;
     border-bottom: 1px solid black;
@@ -25,7 +25,7 @@ header {
 }
 
 .logo h1 {
-    font-size: calc(1.2rem + 1.2vw);
+    font-size: calc(1.2rem + 1.5vw);
 }
 
 .logo:hover {
@@ -49,6 +49,8 @@ header {
 
 input {
     width: 88%;
+    border: none;
+    font-size: calc(0.5rem + 0.5vw);
 }
 
 .search-bar, input, .search-icon {
